Backport master 26.1 changes to 1.21.1
This is a backport of the changes from the 26.1 branch after the 1.21.11 backport on 2026-02-23. This is a pretty nasty commit because of the amount of refactoring that got backported.

- Moved shared concurrency helpers into a new api module, including the fastutil-backed concurrent maps/sets, IteratorSafeOrderedReferenceSet, ConcurrentCollections, ConcurrentObjectArrayList, AsyncCompatible, SensorUtils, and SyncItemPickup.
- Updated common, Fabric, and NeoForge code to consume the shared API helpers.

Refreshed the async entity ticking pipeline and related mixins:
- update ParallelProcessor compatibility checks and tick error handling
- added TickStats and refresh stats/config command output
- synchronized item pickup call sites through SyncItemPickup
- updated entity, AI sensor, breeding, movement, server, world, and Lithium
  mixins for the backported 26.1 concurrency changes
- added MinecartHopperMixin, ServerEntityMixin, ThreadSafeLegacyRandomSourceMixin,
  LithiumInternerMixin, LithiumSectionedBlockChangeTrackerMixin, and
  ReferenceMaskedListMixin
- removed older helpers only where they were replaced or unused on this branch

1.21.1-specific method signatures and injection targets that were left alone or restored after checking them against 1.21.1:
- Mob tryEquip and pickUpItem wrappers on the 1.21.1 signatures
- vanilla pickup mixins on pickUpItem(ItemEntity), not the newer ServerLevel signature
- ChunkHolder blockChanged and sectionLightChanged wrappers void-returning
- LivingEntity tickEffects List.of hook that does not exist in 1.21.1
- 1.21.1 Util and ClassInstanceMultiMap lambda names
- ServerWatchdog local capture for the 1.21.1 watchdog body
- CrashReport.addCategory for NeoForge production runtime
- PersistentEntitySectionManager.Callback onMove/onRemove locking
- NetherPortalBlock getExitPortal locking/cache with PortalCreationCache
- NeoForge Level capturedBlockSnapshots add/remove synchronization
- ServerChu