@@ -1,8 +1,6 @@
 package com.axalotl.async.common.mixin.entity.sensor;
 
-import com.axalotl.async.common.parallelised.utils.FastBitRadixSort;
-import com.llamalad7.mixinextras.injector.wrapmethod.WrapMethod;
-import com.llamalad7.mixinextras.injector.wrapoperation.Operation;
+import com.axalotl.async.api.utils.SensorUtils;
 import net.minecraft.server.level.ServerLevel;
 import net.minecraft.world.entity.EntitySelector;
 import net.minecraft.world.entity.LivingEntity;
@@ -11,10 +9,10 @@ import net.minecraft.world.entity.ai.memory.MemoryModuleType;
 import net.minecraft.world.entity.ai.sensing.PlayerSensor;
 import net.minecraft.world.entity.player.Player;
 import org.spongepowered.asm.mixin.Mixin;
-import org.spongepowered.asm.mixin.Unique;
+import org.spongepowered.asm.mixin.Overwrite;
 
-import java.util.ArrayList;
-import java.util.List;
+import java.util.*;
+import java.util.stream.Collectors;
 
 import static net.minecraft.world.entity.ai.sensing.Sensor.isEntityAttackable;
 import static net.minecraft.world.entity.ai.sensing.Sensor.isEntityTargetable;
@@ -22,35 +20,25 @@ import static net.minecraft.world.entity.ai.sensing.Sensor.isEntityTargetable;
 @Mixin(value = PlayerSensor.class, priority = 1500)
 public abstract class PlayerSensorMixin {
 
-
-    @Unique
-    private static final FastBitRadixSort async$playerSort = new FastBitRadixSort();
-
-    @WrapMethod(method = "doTick(Lnet/minecraft/server/level/ServerLevel;Lnet/minecraft/world/entity/LivingEntity;)V")
-    private void doTick(ServerLevel level, LivingEntity entity, Operation<Void> original) {
-        Object[] arr = level.players().stream()
+    /**
+     * @author _Axa_lotL_
+     * @reason async distance cache
+     */
+    @Overwrite
+    protected void doTick(final ServerLevel level, final LivingEntity body) {
+        List<Player> players = level.players()
+                .stream()
                 .filter(EntitySelector.NO_SPECTATORS)
-                .filter(p_26744_ -> entity.closerThan(p_26744_, 16.0))
-                .toArray();
-
-        async$playerSort.sort(arr, arr.length, entity.position());
-
-        List<Player> list = new ArrayList<>(arr.length);
-        for (Object o : arr) list.add((Player) o);
-
-        Brain<?> brain = entity.getBrain();
-        brain.setMemory(MemoryModuleType.NEAREST_PLAYERS, list);
-
-        List<Player> list1 = list.stream()
-                .filter(p -> isEntityTargetable(entity, p))
+                .filter(player -> body.closerThan(player, 16.0))
+                .sorted(SensorUtils.comparingDouble(body))
+                .collect(Collectors.toList());
+        Brain<?> brain = body.getBrain();
+        brain.setMemory(MemoryModuleType.NEAREST_PLAYERS, players);
+        List<Player> visiblePlayers = players.stream()
+                .filter(livingEntity -> isEntityTargetable(body, livingEntity))
                 .toList();
-
-        brain.setMemory(MemoryModuleType.NEAREST_VISIBLE_PLAYER, list1.isEmpty() ? null : list1.getFirst());
-
-        List<Player> list2 = list1.stream()
-                .filter(p -> isEntityAttackable(entity, p))
-                .toList();
-
-        brain.setMemory(MemoryModuleType.NEAREST_VISIBLE_ATTACKABLE_PLAYER, list2.isEmpty() ? null : list2.getFirst());
+        brain.setMemory(MemoryModuleType.NEAREST_VISIBLE_PLAYER, visiblePlayers.isEmpty() ? null : visiblePlayers.get(0));
+        List<Player> visibleAttackablePlayers = visiblePlayers.stream().filter(livingEntity -> isEntityAttackable(body, livingEntity)).toList();
+        brain.setMemory(MemoryModuleType.NEAREST_VISIBLE_ATTACKABLE_PLAYER, visibleAttackablePlayers.isEmpty() ? null : visibleAttackablePlayers.get(0));
     }
 }
